# moveboxtracker

./: .gitignore  README.md  pyproject.toml
cli/: README.md  pyproject.toml
cli/scripts/: movebox
cli/src/moveboxtracker/: __init__.py  __main__.py  cli.py  db.py  movingbox_schema.sql
db/: README.md  batch_move.sql  box_scan.sql  box_scan.sqlite  image.sql  item.sql  location.sql  log.sql  log.sqlite  move_project.sql  moving_box.sql  moving_box.sqlite  room.sql  room.sqlite  tmpdb.sqlite  uri_user.sql
moveboxtracker/: cli.py  db.py  label.py  printable.py  ui_callback.py
src/moveboxtracker/: db.py
