[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "moveboxtracker"
dynamic = ["version", "description"]
authors = [
    { name = "Ian Kluft", email="ko6yq.dev+python@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Intended Audience :: End Users/Desktop"
]
requires-python = ">=3.10"
dependencies = [
    "colorlookup >= 0.2",
    "weasyprint >= 55, < 58",
    "qrcode >= 7.0, < 8.0",
    "pyxdg >=0.27, < 2.0",
    "prettytable >=2.3, <4.0"
]

[project.urls]
Home = "https://github.com/ikluft/moveboxtracker"
Source = "https://github.com/ikluft/moveboxtracker/"
Bug_Tracker = "https://github.com/ikluft/moveboxtracker/issues"

[project.scripts]
movebox = "moveboxtracker.cli:run"

[project.optional-dependencies]
test = [
    "flake8 >= 3.0.0, <7.0"
]
doc = ["sphinx"]
